--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.5.12",
+    "mongoose-paginate-v2": "^1.3.0",
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
